--- a/vuedemo_in_html/8.组件.html
+++ b/vuedemo_in_html/8.组件.html
@@ -1,3 +1,7 @@
+<!--prop不能对他进行重新复制this.xx=this.xx-->
+<!--如果是普通类型要改天他的值 方法和计算属性 和在他本身都可以，如果又要在子组件内部动态监听他的变化就要放到子组件data里面重新给值this.abc=this.xx-->
+<!--如果是引用类型 数组或者对象  只有计算属性可以,直接用,并且父组件也会跟着改变-->
+<!--如果 prop 是一个对象或数组，在子组件内部改变它会影响父组件的状态。-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,6 +27,10 @@
   <br>
   <!--number类型-->
   <comp :msg="1" ></comp>
+
+  <br>
+  <childc :msg1="name" key="3"></childc>
+  <div>{{name}}</div>
 </div>
 <script src="https://unpkg.com/vue"></script>
 <script>
@@ -35,7 +43,7 @@
   Vue.component('comp', {
     // camelCase in JavaScript
     props: ['msg'],
-    template: '<span>{{ msg+2 }}</span>'
+    template: '<span>{{ msg }}</span>'
   });
 
   Vue.component('todoitem', {
@@ -43,6 +51,28 @@
     props: ['text','isComplete','aa'],
     template: '<span>{{text}}--{{isComplete}}--{{aa.bb}}</span>'
   })
+
+  Vue.component('childc', {
+    // camelCase in JavaScript
+    props: ['msg1'],
+    template: '<span>{{normalizedSize}}</span>',
+     methods:{
+      aaa(){
+        return  this.msg1.push(2)
+      }
+     },
+    computed: {
+      normalizedSize: function () {
+
+        return this.abc.push(2);
+      }
+    },
+    data(){
+      return{
+         abc:this.msg1
+      }
+    }
+  });
 
   new Vue({
     el:'#app',
@@ -55,6 +85,7 @@
           bb:'我来了'
         }
       },
+      name:[1,2,3]
     }
 
   })
