--- a/vuedemo_in_html/8.组件.html
+++ b/vuedemo_in_html/8.组件.html
@@ -2,6 +2,8 @@
 <!--如果是普通类型要改天他的值 方法和计算属性 和在他本身都可以，如果又要在子组件内部动态监听他的变化就要放到子组件data里面重新给值this.abc=this.xx-->
 <!--如果是引用类型 数组或者对象  只有计算属性可以,直接用,并且父组件也会跟着改变-->
 <!--如果 prop 是一个对象或数组，在子组件内部改变它会影响父组件的状态。-->
+<!--参数效验时，只有type有效，效验一般不用，给其他人使用时可以加上效验-->
+<!--组件传入class或者style会合并，对其替他的特性会替换-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,6 +33,8 @@
   <br>
   <childc :msg1="name" key="3"></childc>
   <div>{{name}}</div>
+
+
 </div>
 <script src="https://unpkg.com/vue"></script>
 <script>
@@ -54,7 +58,13 @@
 
   Vue.component('childc', {
     // camelCase in JavaScript
-    props: ['msg1'],
+//    props: ['msg1'],
+    props:{
+      msg1: {
+        type: Array,
+//        default:[3,4,5]
+      }
+    },
     template: '<span>{{normalizedSize}}</span>',
      methods:{
       aaa(){
@@ -73,6 +83,8 @@
       }
     }
   });
+
+
 
   new Vue({
     el:'#app',
