--- a/vuedemo_in_html/8.组件.html
+++ b/vuedemo_in_html/8.组件.html
@@ -15,6 +15,7 @@
   <input type="text" v-model="msg">
   <child-a :my-message="msg"></child-a>
   <br>
+  <!--语法糖-->
   <todoitem v-bind="todo"></todoitem>
   <br>
   <!--等价于-->
