--- a/vuedemo_in_html/12列表过渡.html
+++ b/vuedemo_in_html/12列表过渡.html
@@ -1,6 +1,7 @@
 <!--v-enter-active和v-leave-active是控制动画的 时间 平缓度-->
 <!--v-enter和v-leave-to才是真正控制动画的的具体规则如下-->
 <!--进入时候的动画是以v-enter的位置---本身的位置，离开的动画是以本身的位置---v-leave-to的位置-->
+<!--内容有点多等我复习了css3的动画再来看这里-->
 <!DOCTYPE html>
 <html lang="zh">
 <head>
